--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
+    "test": "playwright test",
     "clean": "rm -rf dist"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
     "express": "^4.21.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.0.0",
     "tsx": "^4.7.0",
